--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -54,3 +54,7 @@ models:
       - github.com/99designs/gqlgen/graphql.Int
       - github.com/99designs/gqlgen/graphql.Int64
       - github.com/99designs/gqlgen/graphql.Int32
+  Tank:
+    fields:
+      modules:
+        resolver: true
