added resolver for next and previous tanks, updated readme and implemented search.

--- a/gqlgen.yml
+++ b/gqlgen.yml
@@ -58,3 +58,7 @@ models:
     fields:
       modules:
         resolver: true
+      previousTanks:
+        resolver: true
+      nextTanks:
+        resolver: true
